<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <parent>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-starter-parent</artifactId>
        <version>4.0.5</version>
        <relativePath/>
    </parent>

    <groupId>fr.insee.pearljam</groupId>
    <artifactId>pearljam-back-office-parent</artifactId>
    <version>${revision}${changelist}</version>
    <packaging>pom</packaging>
    <name>Pearl-Jam-Back-Office Parent</name>

    <properties>
        <revision>5.26.0</revision>
        <changelist></changelist>
        <java.version>25</java.version>
        <maven.compiler.source>25</maven.compiler.source>
        <maven.compiler.target>25</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
        <sonar.organization>inseefr</sonar.organization>
        <sonar.host.url>https://sonarcloud.io</sonar.host.url>
        <sonar.java.binaries>target</sonar.java.binaries>
        <sonar.coverage.jacoco.xmlReportPaths>
            ${project.basedir}/../pearljam-coverage/target/site/jacoco-aggregate/jacoco.xml
        </sonar.coverage.jacoco.xmlReportPaths>
        <cucumber.version>7.21.1</cucumber.version>
        <springdoc.version>3.0.2</springdoc.version>
        <archunit.version>1.4.1</archunit.version>
        <jacoco.version>0.8.14</jacoco.version>
        <commons-validator.version>1.10.1</commons-validator.version>
    </properties>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>fr.insee.pearljam</groupId>
                <artifactId>pearljam-domain-model</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>fr.insee.pearljam</groupId>
                <artifactId>pearljam-domain</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>fr.insee.pearljam</groupId>
                <artifactId>pearljam-shared-dto</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>fr.insee.pearljam</groupId>
                <artifactId>pearljam-shared-persistence-model</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>fr.insee.pearljam</groupId>
                <artifactId>pearljam-infrastructure-persistence</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>fr.insee.pearljam</groupId>
                <artifactId>pearljam-infrastructure-http</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>fr.insee.pearljam</groupId>
                <artifactId>pearljam-infrastructure-security</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>fr.insee.pearljam</groupId>
                <artifactId>pearljam-api</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>org.springdoc</groupId>
                <artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
                <version>${springdoc.version}</version>
            </dependency>
            <dependency>
                <groupId>com.tngtech.archunit</groupId>
                <artifactId>archunit</artifactId>
                <version>${archunit.version}</version>
            </dependency>
            <dependency>
                <groupId>commons-validator</groupId>
                <artifactId>commons-validator</artifactId>
                <version>${commons-validator.version}</version>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <modules>
        <module>pearljam-domain-model</module>
        <module>pearljam-domain</module>
        <module>pearljam-shared-dto</module>
        <module>pearljam-shared-persistence-model</module>
        <module>pearljam-infrastructure-persistence</module>
        <module>pearljam-infrastructure-http</module>
        <module>pearljam-infrastructure-security</module>
        <module>pearljam-api</module>
        <module>pearljam-coverage</module>
    </modules>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <configuration>
                    <release>${java.version}</release>
                    <annotationProcessorPaths>
                        <path>
                            <groupId>org.projectlombok</groupId>
                            <artifactId>lombok</artifactId>
                            <version>${lombok.version}</version>
                        </path>
                    </annotationProcessorPaths>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>3.5.4</version>
                <configuration>
                    <failIfNoSpecifiedTests>false</failIfNoSpecifiedTests>
                    <includes>
                        <include>**/TestAuthKeyCloak</include>
                        <include>**/TestNoAuth</include>
                        <include>**/*Test</include>
                        <include>**/*TestRunner</include>
                    </includes>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-failsafe-plugin</artifactId>
                <version>3.5.4</version>
                <configuration>
                    <failIfNoSpecifiedTests>false</failIfNoSpecifiedTests>
                    <includes>
                        <include>**/*IT</include>
                    </includes>
                </configuration>
                <executions>
                    <execution>
                        <goals>
                            <goal>integration-test</goal>
                            <goal>verify</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>

    <profiles>
        <profile>
            <id>coverage</id>
            <build>
                <plugins>
                    <plugin>
                        <groupId>org.jacoco</groupId>
                        <artifactId>jacoco-maven-plugin</artifactId>
                        <version>${jacoco.version}</version>
                        <executions>
                            <execution>
                                <id>prepare-agent</id>
                                <goals>
                                    <goal>prepare-agent</goal>
                                </goals>
                            </execution>
                            <execution>
                                <id>prepare-agent-integration</id>
                                <goals>
                                    <goal>prepare-agent-integration</goal>
                                </goals>
                            </execution>
                        </executions>
                    </plugin>
                </plugins>
            </build>
        </profile>
    </profiles>

</project>
